# LiftCycle

./: .gitignore  .pre-commit-config.yaml  01_pdr.md  02_user_stories.md  03_tech_spec.md  CLAUDE.md  PLAN.md
.github/workflows/: backend.yml  frontend.yml
backend/: .env  pyproject.toml  ruff.toml
backend/alembic/: env.py
backend/alembic/versions/: 13ababff6f70_initial_schema.py  e943cccae0e9_cycles_updated_schema.py
backend/app/: auth.py  config.py  database.py  db.py  main.py  models.py  services.py
backend/app/auth/: dependencies.py  router.py  service.py
backend/app/cycles/: models.py  router.py  schemas.py  service.py
backend/app/routers/: auth.py  cycles.py
backend/app/users/: models.py  schemas.py
backend/tests/: conftest.py  test_api.py
frontend/: package-lock.json  package.json
learning/: backend-session-summary.docx
